maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value rand
var random3:Int = rand(1) + rand(1) + rand (1)
                  ^